--- a/html_week_1/markupChapter/chapter.css
+++ b/html_week_1/markupChapter/chapter.css
@@ -35,3 +35,30 @@ color: #999;
     margin-left: -1.5em;
     margin-right: -1.5em;
     }
+.img1 {
+
+    float:left;
+    padding: 10px;
+}
+
+.img2 {
+
+    float:right;
+    padding: 10px;
+  
+}
+a:link{
+    color:orange;
+}
+a:visited{
+color:pink;
+    text-decoration: none;
+    font-style: italic;
+}
+a:hover{
+    background-color:green;
+}
+
+a:active{
+    background-color:red;
+}
